tarantool-modules removed from docker file

--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -12,4 +12,4 @@ ENV LC_ALL C.UTF-8
 
 EXPOSE 3301
 # Install tarantool pack
-RUN apt-get install -y --force-yes tarantool tarantool-dev tarantool-modules tarantool-expirationd tarantool-queue tarantool-http tarantool-shard
+RUN apt-get install -y --force-yes tarantool tarantool-dev tarantool-expirationd tarantool-queue tarantool-http tarantool-shard
