--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -2,8 +2,9 @@ FROM ubuntu:trusty
 
 # Add tarantool repo
 RUN touch /etc/apt/sources.list.d/tarantool.list
-RUN echo 'deb http://tarantool.org/dist/master/ubuntu/ trusty main' >> /etc/apt/sources.list.d/tarantool.list
-RUN echo 'deb-src http://tarantool.org/dist/master/ubuntu/ trusty main' >> /etc/apt/sources.list.d/tarantool.list
+RUN curl http://download.tarantool.org/tarantool/1.6/gpgkey | sudo apt-key add -
+RUN echo 'deb http://download.tarantool.org/tarantool/1.6/ubuntu/ trusty main' >> /etc/apt/sources.list.d/tarantool.list
+RUN echo 'deb-src http://download.tarantool.org/tarantool/1.6/ubuntu/ trusty main' >> /etc/apt/sources.list.d/tarantool.list
 
 RUN apt-get update
 
