--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -1,11 +1,14 @@
 FROM debian:jessie
+RUN apt-get update
 
 # Add tarantool repo
 RUN touch /etc/apt/sources.list.d/tarantool.list
-RUN echo 'deb http://tarantool.org/dist/1.6/debian/ jessie main' >> /etc/apt/sources.list.d/tarantool.list
-RUN echo 'deb-src http://tarantool.org/dist/1.6/debian/ jessie main' >> /etc/apt/sources.list.d/tarantool.list
+RUN echo 'deb http://download.tarantool.org/tarantool/1.6/debian/ jessie main' >> /etc/apt/sources.list.d/tarantool.list
+RUN echo 'deb-src http://download.tarantool.org/tarantool/1.6/debian/ jessie main' >> /etc/apt/sources.list.d/tarantool.list
 
-RUN apt-get update
+# Add GPG key
+RUN apt-get install -y curl && curl http://download.tarantool.org/tarantool/1.6/gpgkey | apt-key add -
+RUN apt-get install -y apt-transport-https && apt-get update 
 
 # Install locales
 RUN apt-get install -y locales
@@ -20,4 +23,4 @@ ENV LANGUAGE en_US.UTF-8
 
 EXPOSE 3301
 # Install tarantool pack
-RUN apt-get install -y --force-yes tarantool tarantool-dev tarantool-expirationd tarantool-queue tarantool-http tarantool-pool tarantool-shard
+RUN apt-get install -y --force-yes tarantool tarantool-dev tarantool-expirationd tarantool-queue tarantool-http tarantool-connpool tarantool-shard
