--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -23,4 +23,4 @@ ENV LANGUAGE en_US.UTF-8
 
 EXPOSE 3301
 # Install tarantool pack
-RUN apt-get install -y --force-yes tarantool tarantool-dev tarantool-expirationd tarantool-queue tarantool-http tarantool-connpool tarantool-shard
+RUN apt-get install -y --force-yes tarantool tarantool-dev tarantool-expirationd tarantool-queue tarantool-http tarantool-connpool tarantool-shard tarantool-cbench tarantool-avro tarantool-pg tarantool-mysql tarantool-memcached
