Open console if running within a terminal

--- a/1.6/Dockerfile
+++ b/1.6/Dockerfile
@@ -102,6 +102,7 @@ RUN set -x \
     && luarocks install pg \
     && luarocks install mysql \
     && luarocks install memcached \
+    && luarocks install lua-term \
     && : "---------- remove build deps ----------" \
     && apk del .build-deps
 
