--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -23,15 +23,11 @@ RUN set -x \
         libgomp \
         lua \
         curl \
-        lua-dev \
-        musl-dev \
-        make \
-        git \
-        gcc \
         tar \
         zip \
     && apk add --no-cache --virtual .build-deps \
         perl \
+        gcc \
         g++ \
         cmake \
         readline-dev \
@@ -40,6 +36,10 @@ RUN set -x \
         lz4-dev \
         binutils-dev \
         ncurses-dev \
+        lua-dev \
+        musl-dev \
+        make \
+        git \
     && : "---------- tarantool ----------" \
     && mkdir -p /usr/src/tarantool \
     && git clone "$TARANTOOL_DOWNLOAD_URL" /usr/src/tarantool \
@@ -54,6 +54,7 @@ RUN set -x \
              .) \
     && make -C /usr/src/tarantool -j\
     && make -C /usr/src/tarantool install \
+    && make -C /usr/src/tarantool clean \
     && : "---------- small ----------" \
     && (cd /usr/src/tarantool/src/lib/small; \
         cmake -DCMAKE_INSTALL_PREFIX=/usr \
@@ -62,6 +63,7 @@ RUN set -x \
               .) \
     && make -C /usr/src/tarantool/src/lib/small \
     && make -C /usr/src/tarantool/src/lib/small install \
+    && make -C /usr/src/tarantool/src/lib/small clean \
     && : "---------- msgpuck ----------" \
     && (cd /usr/src/tarantool/src/lib/msgpuck; \
         cmake -DCMAKE_INSTALL_PREFIX=/usr \
@@ -70,6 +72,7 @@ RUN set -x \
               .) \
     && make -C /usr/src/tarantool/src/lib/msgpuck \
     && make -C /usr/src/tarantool/src/lib/msgpuck install \
+    && make -C /usr/src/tarantool/src/lib/msgpuck clean \
     && : "---------- luarocks ----------" \
     && wget -O luarocks.tar.gz "$LUAROCKS_URL" \
     && mkdir -p /usr/src/luarocks \
@@ -79,6 +82,8 @@ RUN set -x \
         make build; \
         make install) \
     && rm -r /usr/src/luarocks \
+    && rm -rf /usr/src/tarantool \
+    && : "---------- remove build deps ----------" \
     && apk del .build-deps
 
 COPY luarocks-config.lua /usr/local/etc/luarocks/config-5.1.lua
@@ -95,6 +100,8 @@ RUN set -x \
         gcc \
         g++ \
         postgresql-dev \
+        lua-dev \
+        musl-dev \
     && : "---------- luarocks ----------" \
     && luarocks install avro-schema \
     && luarocks install expirationd \
