Allow to change settings after first run
There is now a way to change settings dynamically:

tarantool_set_config.lua <env var> <value>

e.g.

tarantool_set_config.lua TARANTOOL_SLAB_ALLOC_ARENA 1.2

All things that can be set via env, can be changed this way.

Fixes #4

--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -123,13 +123,17 @@ RUN mkdir -p /var/lib/tarantool \
     && mkdir -p /opt/tarantool \
     && chown tarantool:tarantool /opt/tarantool \
     && mkdir -p /var/run/tarantool \
-    && chown tarantool:tarantool /var/run/tarantool
+    && chown tarantool:tarantool /var/run/tarantool \
+    && mkdir /etc/tarantool \
+    && chown tarantool:tarantool /etc/tarantool
 
 VOLUME /var/lib/tarantool
 VOLUME /opt/tarantool
+VOLUME /etc/tarantool
 WORKDIR /opt/tarantool
 
 COPY tarantool-entrypoint.lua /usr/local/bin/
+COPY tarantool_set_config.lua /usr/local/bin/
 COPY docker-entrypoint.sh /usr/local/bin/
 COPY tarantool.default /usr/local/etc/default/tarantool
 
