Add cyrus-sasl to dependencies
cyrus-sasl is requied to build updated memcached module

Fixes #8

--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -92,6 +92,7 @@ RUN set -x \
     && apk add --no-cache --virtual .run-deps \
         mariadb-client-libs \
         libpq \
+        cyrus-sasl \
     && apk add --no-cache --virtual .build-deps \
         git \
         cmake \
@@ -102,6 +103,7 @@ RUN set -x \
         postgresql-dev \
         lua-dev \
         musl-dev \
+        cyrus-sasl-dev \
     && : "---------- luarocks ----------" \
     && luarocks install avro-schema \
     && luarocks install expirationd \
