--- a/1.6/Dockerfile
+++ b/1.6/Dockerfile
@@ -91,6 +91,7 @@ RUN set -x \
     && apk add --no-cache --virtual .run-deps \
         mariadb-client-libs \
         libpq \
+        cyrus-sasl \
     && apk add --no-cache --virtual .build-deps \
         git \
         cmake \
@@ -100,6 +101,7 @@ RUN set -x \
         postgresql-dev \
         lua-dev \
         musl-dev \
+        cyrus-sasl-dev \
     && : "---------- luarocks ----------" \
     && luarocks install avro-schema \
     && luarocks install expirationd \
