Add tarantool-curl rock

--- a/1.6/Dockerfile
+++ b/1.6/Dockerfile
@@ -89,6 +89,7 @@ RUN set -x \
         mariadb-client-libs \
         libpq \
         cyrus-sasl \
+        libcurl \
     && apk add --no-cache --virtual .build-deps \
         git \
         cmake \
@@ -99,6 +100,7 @@ RUN set -x \
         lua-dev \
         musl-dev \
         cyrus-sasl-dev \
+        curl-dev \
     && : "---------- luarocks ----------" \
     && luarocks install avro-schema \
     && luarocks install expirationd \
@@ -111,6 +113,7 @@ RUN set -x \
     && luarocks install memcached \
     && luarocks install tarantool-prometheus \
     && luarocks install lua-term \
+    && luarocks install tarantool-curl \
     && : "---------- remove build deps ----------" \
     && apk del .build-deps
 
