Add mqtt rock to 1.6 and 1.7

--- a/1.6/Dockerfile
+++ b/1.6/Dockerfile
@@ -90,6 +90,7 @@ RUN set -x \
         libpq \
         cyrus-sasl \
         libcurl \
+        mosquitto-libs \
     && apk add --no-cache --virtual .build-deps \
         git \
         cmake \
@@ -101,6 +102,7 @@ RUN set -x \
         musl-dev \
         cyrus-sasl-dev \
         curl-dev \
+        mosquitto-dev \
     && : "---------- luarocks ----------" \
     && luarocks install avro-schema \
     && luarocks install expirationd \
@@ -114,6 +116,7 @@ RUN set -x \
     && luarocks install tarantool-prometheus \
     && luarocks install lua-term \
     && luarocks install tarantool-curl \
+    && luarocks install mqtt \
     && : "---------- remove build deps ----------" \
     && apk del .build-deps
 
