Scripts to detect if tarantool is up

--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -160,6 +160,7 @@ WORKDIR /opt/tarantool
 COPY tarantool-entrypoint.lua /usr/local/bin/
 COPY tarantool_set_config.lua /usr/local/bin/
 COPY docker-entrypoint.sh /usr/local/bin/
+COPY tarantool_is_up /usr/local/bin/
 COPY tarantool.default /usr/local/etc/default/tarantool
 
 RUN ln -s usr/local/bin/docker-entrypoint.sh /entrypoint.sh # backwards compat
